[gd_scene load_steps=8 format=2]

[ext_resource path="res://Screens/StoryScreen/Prefabs/CutsceneSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/StoryScreen/Scripts/StoryScreen.gd" type="Script" id=2]
[ext_resource path="res://Screens/StoryScreen/Textures/CONCEPT/TEXTBOX_NAME_PLACEHOLDER.png" type="Texture" id=3]
[ext_resource path="res://Screens/StoryScreen/Textures/CONCEPT/TEXTBOX_MAIN_PLACEHOLDER.png" type="Texture" id=4]
[ext_resource path="res://Screens/StoryScreen/Scripts/Textbox.gd" type="Script" id=5]
[ext_resource path="res://Screens/StoryScreen/Scripts/CutsceneManager.gd" type="Script" id=6]
[ext_resource path="res://Screens/PrologueScreen/Prefabs/FadeOut.tscn" type="PackedScene" id=7]

[node name="StoryScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="BG" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="BG"]

[node name="CutsceneSprite" parent="." instance=ExtResource( 1 )]

[node name="CutsceneSprite2" parent="." instance=ExtResource( 1 )]
visible = false

[node name="CutsceneSprite3" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Textbox" type="Node2D" parent="."]
position = Vector2( 0, 80 )
script = ExtResource( 5 )

[node name="MainBody" type="Node2D" parent="Textbox"]

[node name="Sprite" type="Sprite" parent="Textbox/MainBody"]
texture = ExtResource( 4 )

[node name="TextRoot" type="Node2D" parent="Textbox/MainBody"]
position = Vector2( -155, -35 )

[node name="Text" type="RichTextLabel" parent="Textbox/MainBody/TextRoot"]
margin_right = 310.0
margin_bottom = 74.0
scroll_active = false

[node name="Namefield" type="Node2D" parent="Textbox"]

[node name="Sprite" type="Sprite" parent="Textbox/Namefield"]
position = Vector2( -130, -47.5 )
texture = ExtResource( 3 )

[node name="TextRoot" type="Node2D" parent="Textbox/Namefield"]
position = Vector2( -155, -51 )
scale = Vector2( 0.8, 0.8 )

[node name="Text" type="RichTextLabel" parent="Textbox/Namefield/TextRoot"]
margin_right = 66.0
margin_bottom = 19.0
scroll_active = false

[node name="CutsceneManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="FadeOut" parent="." instance=ExtResource( 7 )]
